hls-main/force-app/main/default/objects/Application_Approval__c/Application_Approval__c.object-meta.xml
<CustomObject>
    <label>Application Approval</label>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Application Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>