hls-main/force-app/main/default/objects/Application_Approval__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The developers description of the Application being submitted for ACM API Access.</description>
    <inlineHelpText>Describe your Application and how you will use our API&apos;s.</inlineHelpText>
    <label>Description</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>