hls-main/force-app/main/default/objects/Application_Approval__c/listViews/Application_Approvers_Application_Approval.listView-meta.xml
<ListView>
    <fullName>Application_Approvers_Application_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>Application Approvers</label>
    <queue>Application_Approvers</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>